converted my array methods to string ones since we need to implement some string logic implementations at this point